<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/yearText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="Enter Year"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistText" />

    <EditText
        android:id="@+id/artistText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="Enter Artist"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="230dp"
        android:layout_height="190dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artImageView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="107dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="SAVE"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearText" />
</androidx.constraintlayout.widget.ConstraintLayout>